--- a/pychronia_common/static/MetalRadiance/scss/_dropdown_menu_mobile.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_dropdown_menu_mobile.scss
@@ -7,7 +7,7 @@ ul.dropmenu {
         font-size: 18px;
         text-decoration: none;
         line-height: 27px;
-        padding: 0px 6px;
+        padding: 0 6px;
         text-align: left;
         float: none;
 
@@ -23,7 +23,7 @@ ul.dropmenu {
 
     ul a, ul span {
         background-color: #342716; // sublinks only
-        padding: 0 6px;
+        padding: 2px 6px;
     }
 
 }
