--- a/pychronia_common/static/MetalRadiance/scss/_layout_mobile.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_layout_mobile.scss
@@ -6,7 +6,7 @@ body {
     // real CSS min-width of smarthones, 1.5x smaller than physical width
     min-width: 320px;
 
-    font-size: 110%;
+    font-size: 100%;  // NO ZOOMING for now on smartphones/tablets
 
     &.full_background {
         background: #152421 url("img/backgrounds/mobile/body-bg.jpg") repeat-y scroll top center;
